force-app/src/objects/OrderApi__Invoice_Line__c.object
<CustomObject>
    <description>Invoice Lines hold the detail for a Invoice.</description>
    <fields>
        <fullName>OrderApi__AR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the GL Account used for A/R transactions.</description>
        <inlineHelpText>Identifies the GL Account used for A/R transactions.</inlineHelpText>
        <label>A/R Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>InvoiceLines</relationshipLabel>
        <relationshipName>InvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Activation_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Adjustment_Reason__c</fullName>
        <description>Select the reason for the adjustment.</description>
        <inlineHelpText>Select the reason for the adjustment.</inlineHelpText>
        <label>Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Pricing Applied</fullName>
                </value>
                <value>
                    <fullName>Manager Override</fullName>
                </value>
                <value>
                    <fullName>Customer Loyalty Discount</fullName>
                </value>
                <value>
                    <fullName>Misc. Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Adjustments__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Sum of all adjustments, both positive and negative, applied to this invoice line.</description>
        <inlineHelpText>Sum of all adjustments, both positive and negative, applied to this invoice line.</inlineHelpText>
        <label>Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Sum of all payments applied to this invoice line.</description>
        <inlineHelpText>Sum of all payments applied to this invoice line.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Amount_Refunded__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Sum of all refunds applied to this invoice line.</description>
        <inlineHelpText>Sum of all refunds applied to this invoice line.</inlineHelpText>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Calculate_Activation_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>** System Calculated Override ** Valid if the Sales Order Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</description>
        <inlineHelpText>** System Calculated Override ** Valid if the Sales Order Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</inlineHelpText>
        <label>Auto Calculate Activation Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Balance_Due__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field identifies the remaining balance unpaid for this invoice line.</description>
        <inlineHelpText>This field identifies the remaining balance unpaid for this invoice line.</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Default value is mapped from the parent invoice. The Business Group controls what items are available to associate with the invoice line. If no value exists, all active items will be allowed to be associated.</description>
        <inlineHelpText>**System Calculated/Override** Default value is mapped from the parent invoice. The Business Group controls what items are available to associate with the invoice line. If no value exists, all active items will be allowed to be associated.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Default checked. Copies the shipping information from the invoice.</description>
        <inlineHelpText>Default checked. Copies the shipping information from the invoice.</inlineHelpText>
        <label>Calculate Shipping Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated to show the related contact.</description>
        <inlineHelpText>This field is populated to show the related contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the Credit Memo record, when an overpayment is made.</description>
        <inlineHelpText>**System Calculated/Override** Link to the Credit Memo record, when an overpayment is made.</inlineHelpText>
        <label>Credit Memo</label>
        <referenceTo>OrderApi__Credit_Memo__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>*System Calculated/Override* Link to the Credit Note that was generated from Invoice Line.</description>
        <inlineHelpText>*System Calculated/Override* Link to the Credit Note that was generated from Invoice Line.</inlineHelpText>
        <label>Credit Note</label>
        <referenceTo>OrderApi__Credit_Note__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credits_Applied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated/Override** Sum of all payments received using credits on the account for the Invoice Line.</description>
        <inlineHelpText>**System Calculated/Override** Sum of all payments received using credits on the account received for the Invoice Line.</inlineHelpText>
        <label>Credits Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deferred_Revenue_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Creates Deferred Revenue adjustments when checked for Adjustments.</description>
        <inlineHelpText>Creates Deferred Revenue adjustments when checked for Adjustments.</inlineHelpText>
        <label>Deferred Revenue Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__End_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Required/Override** Link to the related GL Account.</description>
        <inlineHelpText>**System Calculated/Required/Override** Link to the related GL Account.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated for adjustments, this field relates the invoice line to a parent invoice line.</description>
        <inlineHelpText>Populated for adjustments, this field relates the invoice line to a parent invoice line.</inlineHelpText>
        <label>Parent Invoice Line</label>
        <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <description>**Required** All Invoice Lines require a linked Invoice.</description>
        <inlineHelpText>**Required** All Invoice Lines require a linked Invoice.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will not the consider the line in inventory calculations. Adjustment lines are the only type of lines that can be added to invoices w/o payments that have posted.</description>
        <inlineHelpText>When checked, the system will not the consider the line in inventory calculations. Adjustment lines are the only type of lines that can be added to invoices w/o payments that have posted.</inlineHelpText>
        <label>Is Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Child_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field was created as a system field to assist in the calculation of adjustments on the Invoice object.</description>
        <inlineHelpText>This field was created as a system field to assist in the calculation of adjustments on the Invoice object.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**Only use for Invoice Line Adjustments related to Posted Invoices** When checked, the adjustment line is posted and a Transaction is created in the system.</description>
        <inlineHelpText>**Only use for Invoice Line Adjustments related to Posted Invoices** When checked, the adjustment line is posted and a Transaction is created in the system.</inlineHelpText>
        <label>Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, related Invoice Line is considered as &quot;Subscription Renewal&quot;.</description>
        <inlineHelpText>When checked, related Invoice Line is considered as &quot;Subscription Renewal&quot;.</inlineHelpText>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Shipping_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the Invoice Line that is being used for shipping.</description>
        <inlineHelpText>Select the checkbox to have this Invoice Line represent shipping.</inlineHelpText>
        <label>Is Shipping Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the Invoice Line that is being used for tax.</description>
        <inlineHelpText>Defines the Invoice Line that is being used for tax.</inlineHelpText>
        <label>Is Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated / Override ** Link to the related Item Class.</description>
        <inlineHelpText>** System Calculated / Override ** Link to the related Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the item related to the record.</description>
        <inlineHelpText>Link to the item related to the record.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Line_Description__c</fullName>
        <description>Optional line description will be added to invoices, receipts, and detailed customer statements. If blank, the value of this field will match the value of the related item&apos;s &quot;Receipt Description&quot; field.</description>
        <inlineHelpText>Optional line description will be added to invoices, receipts, and detailed customer statements. If blank, the value of this field will match the value of the related item&apos;s &quot;Receipt Description&quot; field.</inlineHelpText>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__List_Price__c</fullName>
        <description>**System Calculated** The standard price for the item selected on the invoice line.</description>
        <formula>OrderApi__Item__r.OrderApi__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** The standard price for the item selected on the invoice line.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Parent_Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to the related Parent Sales Order Line.</description>
        <inlineHelpText>**System Calculated** Link to the related Parent Sales Order Line.</inlineHelpText>
        <label>Parent Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipName>Child_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Priority__c</fullName>
        <description>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</description>
        <inlineHelpText>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</inlineHelpText>
        <label>Payment Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Posted_Date__c</fullName>
        <description>**System Calculated** Valid for adjustments only. Default is blank, populates with the current date&apos;s value when a line is flagged as &quot;Is Adjustment&quot; and &quot;Is Posted&quot;.</description>
        <inlineHelpText>**System Calculated** Valid for adjustments only. Default is blank, populates with the current date&apos;s value when a line is flagged as &quot;Is Adjustment&quot; and &quot;Is Posted&quot;.</inlineHelpText>
        <label>Posted Date (Adjustment)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overrides the calculation of price based on the most appropriate price for the purchasing customer. Default is unchecked.</description>
        <inlineHelpText>Overrides the calculation of price based on the most appropriate price for the purchasing customer. Default is unchecked.</inlineHelpText>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The price rule related to the invoice line. When added or changed, the unit price will reflect the price defined on the price rule.</description>
        <inlineHelpText>The price rule related to the invoice line. When added or changed, the unit price will reflect the price defined on the price rule.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>OrderApi__Price_Rule__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of Items to include on the Invoice Detail. Required if the Item does not have &quot;Disable Price Rules&quot; checked. Default 1.</description>
        <inlineHelpText>The quantity of Items to include on the Invoice Detail. Required if the Item does not have &quot;Disable Price Rules&quot; checked. Default 1.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sale_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated/Override** The price per-unit for the item sold on the invoice line.</description>
        <inlineHelpText>**System Calculated/Override** The price per-unit for the item sold on the invoice line.</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to the related Sales Order Line.</description>
        <inlineHelpText>**System Calculated** Link to the related Sales Order Line.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_City__c</fullName>
        <description>Optional shipping city for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping City&quot; field.</description>
        <inlineHelpText>Optional shipping city for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping City&quot; field.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Contact__c</fullName>
        <description>Optional shipping contact for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping Contact&quot; field.</description>
        <inlineHelpText>Optional shipping contact for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping Contact&quot; field.</inlineHelpText>
        <label>Shipping Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Country__c</fullName>
        <description>Optional shipping country for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping Country&quot; field.</description>
        <inlineHelpText>Optional shipping country for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping Country&quot; field.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
        <description>Optional shipping postal code for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping Postal Code&quot; field.</description>
        <inlineHelpText>Optional shipping postal code for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping Postal Code&quot; field.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_State__c</fullName>
        <description>Optional shipping state for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping State&quot; field.</description>
        <inlineHelpText>Optional shipping state for the item&apos;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&apos;s &quot;Shipping State&quot; field.</inlineHelpText>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Street__c</fullName>
        <description>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Shipping Street when Calculate Shipping Details is checked.</description>
        <inlineHelpText>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Shipping Street when Calculate Shipping Details is checked.</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Invoice Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</description>
        <inlineHelpText>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Invoice Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Subscription that is being upgraded or renewed.</description>
        <inlineHelpText>Link to the Subscription that is being upgraded or renewed.</inlineHelpText>
        <label>Subscription (Upgrade/Renew)</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subtotal__c</fullName>
        <description>**System Calculated** Sale Price * Quantity</description>
        <formula>OrderApi__Sale_Price__c * OrderApi__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Sale Price * Quantity</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Amount__c</fullName>
        <description>This field shows the total amount of tax that is applied for the item.</description>
        <inlineHelpText>This field shows the total amount of tax that is applied for the item.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to override any tax calculations by the system.</description>
        <inlineHelpText>This field is used to override any tax calculations by the system.</inlineHelpText>
        <label>Tax Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Percent__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Combined with the Parent Invoice Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</description>
        <inlineHelpText>Combined with the Parent Invoice Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</inlineHelpText>
        <label>Tax Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated/Override** Quantity * Sale Price</description>
        <inlineHelpText>**System Calculated/Override** Quantity * Sale Price</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total_with_Tax__c</fullName>
        <description>The total amount of the line with tax included.</description>
        <inlineHelpText>The total amount of the line with tax included.</inlineHelpText>
        <label>Total with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Line</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Invoice Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>